// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Stepper > renders minus/plus buttons 1`] = `
<body>
  <div>
    <span
      class="stepper changed-control"
    >
      <button
        aria-label="a little more"
        class="icon-bar-btn actionable base-12 secondary circular"
        title="a little more"
      >
        <svg
          aria-hidden="true"
          class="icon medium"
          viewBox="0 0 16 16"
        >
          <title>
            Plus icon
          </title>
          <path
            d="M16 7H9V0H7v7H0v2h7v7h2V9h7V7z"
          />
          
        </svg>
        
         
        
         
        
      </button>
      
       
      <button
        aria-label="a little less"
        class="icon-bar-btn actionable base-12 secondary circular"
        title="a little less"
      >
        <svg
          aria-hidden="true"
          class="icon medium"
          viewBox="0 0 16 16"
        >
          <title>
            Minus icon
          </title>
          <path
            d="M0 7h16v2H0z"
          />
          
        </svg>
        
         
        
         
        
      </button>
      
    </span>
    
    
  </div>
</body>
`;

exports[`Stepper > renders when max value 1`] = `
<body>
  <div>
    <span
      class="stepper changed-control"
    >
      <button
        aria-disabled="true"
        aria-label="a little more"
        class="icon-bar-btn actionable base-12 secondary circular visually-disabled"
        title="a little more"
      >
        <svg
          aria-hidden="true"
          class="icon medium"
          viewBox="0 0 16 16"
        >
          <title>
            Plus icon
          </title>
          <path
            d="M16 7H9V0H7v7H0v2h7v7h2V9h7V7z"
          />
          
        </svg>
        
         
        
         
        
      </button>
      
       
      <button
        aria-label="a little less"
        class="icon-bar-btn actionable base-12 secondary circular"
        title="a little less"
      >
        <svg
          aria-hidden="true"
          class="icon medium"
          viewBox="0 0 16 16"
        >
          <title>
            Minus icon
          </title>
          <path
            d="M0 7h16v2H0z"
          />
          
        </svg>
        
         
        
         
        
      </button>
      
    </span>
    
    
  </div>
</body>
`;

exports[`Stepper > renders when min value 1`] = `
<body>
  <div>
    <span
      class="stepper"
    >
      <button
        aria-label="a little more"
        class="icon-bar-btn actionable base-12 secondary circular"
        title="a little more"
      >
        <svg
          aria-hidden="true"
          class="icon medium"
          viewBox="0 0 16 16"
        >
          <title>
            Plus icon
          </title>
          <path
            d="M16 7H9V0H7v7H0v2h7v7h2V9h7V7z"
          />
          
        </svg>
        
         
        
         
        
      </button>
      
       
      <button
        aria-disabled="true"
        aria-label="a little less"
        class="icon-bar-btn actionable base-12 secondary circular visually-disabled"
        title="a little less"
      >
        <svg
          aria-hidden="true"
          class="icon medium"
          viewBox="0 0 16 16"
        >
          <title>
            Minus icon
          </title>
          <path
            d="M0 7h16v2H0z"
          />
          
        </svg>
        
         
        
         
        
      </button>
      
    </span>
    
    
  </div>
</body>
`;
